[project]
name = "fireflow"
version = "0.1.0"
description = ""
authors = [
    {name = "haithemlajjem",email = "haithem.lajjem.ing@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "flask (>=3.1.2,<4.0.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "pydantic (>=2.11.9,<3.0.0)",
    "alembic (>=1.16.5,<2.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "flask-cors (>=6.0.1,<7.0.0)",
    "flasgger (>=0.9.7.1,<0.10.0.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{ include = "app" }] 

[tool.poetry.group.dev.dependencies]
black = "^25.9.0"
isort = "^6.0.1"
ruff = "^0.13.2"
pytest = "^8.4.2"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "I"]
ignore = ["E501"] 